[gd_scene load_steps=15 format=3 uid="uid://da8dxuncfh6l1"]

[ext_resource type="Script" uid="uid://c1i7gvxr3c5kg" path="res://app_script.gd" id="1_8bgsk"]
[ext_resource type="PackedScene" uid="uid://bh4sifxjwhx0k" path="res://preview.tscn" id="1_k35y7"]

[sub_resource type="Theme" id="Theme_ke61u"]
default_font_size = 20

[sub_resource type="Theme" id="Theme_mwy8r"]

[sub_resource type="Gradient" id="Gradient_dcnci"]
colors = PackedColorArray(0.252754, 0.252754, 0.252754, 1, 0.470952, 0.454796, 0.465306, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y00aq"]
gradient = SubResource("Gradient_dcnci")
width = 10
height = 231
fill_from = Vector2(0, 0.439316)
fill_to = Vector2(1, 0.449573)

[sub_resource type="Gradient" id="Gradient_d2f3d"]
colors = PackedColorArray(0.241156, 0.241156, 0.241156, 1, 0.674815, 0.674815, 0.674815, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1nllu"]
gradient = SubResource("Gradient_d2f3d")
width = 109
height = 9
fill_from = Vector2(1, 0)
fill_to = Vector2(1, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_58f34"]
auto_exposure_scale = 1.0
auto_exposure_speed = 8.43

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_n4jvv"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
sky_curve = 0.00343144
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_4blw0"]
sky_material = SubResource("ProceduralSkyMaterial_n4jvv")

[sub_resource type="Environment" id="Environment_nqgut"]
background_mode = 2
sky = SubResource("Sky_4blw0")
ssr_enabled = true
ssao_enabled = true
ssil_enabled = true
glow_enabled = true

[sub_resource type="Environment" id="Environment_6kw81"]

[sub_resource type="World3D" id="World3D_djk3k"]
environment = SubResource("Environment_nqgut")
fallback_environment = SubResource("Environment_6kw81")
camera_attributes = SubResource("CameraAttributesPractical_58f34")

[node name="App" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8bgsk")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label1" type="Label" parent="HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Origin folder"

[node name="Container4" type="Control" parent="HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="StartImporting" type="Button" parent="HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Import"

[node name="StopImportingButton" type="Button" parent="HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Stop"

[node name="ImportProgressBar" type="ProgressBar" parent="HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 1.0
rounded = true

[node name="Container" type="Control" parent="HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label1" type="Label" parent="HBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Destination folder"

[node name="Container3" type="Control" parent="HBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(24.535, 0)
layout_mode = 2

[node name="SendingButton" type="Button" parent="HBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Send to folder"

[node name="StopSendingButton" type="Button" parent="HBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Stop"

[node name="SendingProgressBar" type="ProgressBar" parent="HBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OriginLineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="OriginButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Browse"

[node name="DestinationLineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="DestinationButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Browse"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 5

[node name="AllSelectButton" type="Button" parent="GridContainer"]
layout_mode = 2
tooltip_text = "Choose / Unchoose everything"
theme = SubResource("Theme_ke61u")
text = "ðŸ—¹"

[node name="SearchTextEdit" type="TextEdit" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "  Size  "

[node name="HSlider" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 100.0
max_value = 500.0
value = 150.0

[node name="SplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_mwy8r")
theme_override_constants/separation = 2
theme_override_constants/minimum_grab_thickness = 10
theme_override_constants/autohide = 0
theme_override_icons/grabber = SubResource("GradientTexture2D_y00aq")
split_offset = 745

[node name="ScrollContainer" type="ScrollContainer" parent="SplitContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="SplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="SplitContainer"]
layout_mode = 2
theme_override_constants/autohide = 0
theme_override_icons/grabber = SubResource("GradientTexture2D_1nllu")
split_offset = 95

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="SplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment_vertical = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="SplitContainer/VSplitContainer/AspectRatioContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SplitContainer/VSplitContainer/AspectRatioContainer/SubViewportContainer"]
world_3d = SubResource("World3D_djk3k")
handle_input_locally = false
scaling_3d_scale = 2.0
size = Vector2i(396, 396)
render_target_update_mode = 4

[node name="Node3D" parent="SplitContainer/VSplitContainer/AspectRatioContainer/SubViewportContainer/SubViewport" instance=ExtResource("1_k35y7")]

[node name="MarginContainer" type="MarginContainer" parent="SplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="SplitContainer/VSplitContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.78

[node name="RotationContainer" type="HBoxContainer" parent="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer/RotationContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.8
text = "Rotation"

[node name="RotationSlider" type="HSlider" parent="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer/RotationContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -6.0
max_value = 6.0
step = 0.1

[node name="UVScaleContainer" type="HBoxContainer" parent="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer/UVScaleContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.8
text = "UV scale"

[node name="UVScaleSlider" type="HSlider" parent="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer/UVScaleContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 5.0
step = 0.01
value = 0.5

[node name="ToggleNMButton" type="Button" parent="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Toggle normal map type (OpenGL/DirectX)"
autowrap_mode = 2

[node name="OriginFileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(500, 500)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
use_native_dialog = true

[node name="DestinationFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 2
size = Vector2i(500, 500)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="button_up" from="HBoxContainer2/HBoxContainer/StartImporting" to="." method="_on_start_importing_button_up"]
[connection signal="button_up" from="HBoxContainer2/HBoxContainer/StopImportingButton" to="." method="_on_stop_importing_button_up"]
[connection signal="button_up" from="HBoxContainer2/HBoxContainer3/SendingButton" to="." method="_on_sending_button_up"]
[connection signal="button_up" from="HBoxContainer2/HBoxContainer3/StopSendingButton" to="." method="_on_stop_sending_button_up"]
[connection signal="button_up" from="HBoxContainer/OriginButton" to="." method="_on_open_origin_button_up"]
[connection signal="button_up" from="HBoxContainer/DestinationButton" to="." method="_on_open_destination_button_up"]
[connection signal="button_up" from="GridContainer/AllSelectButton" to="." method="_on_all_select_button_up"]
[connection signal="text_changed" from="GridContainer/SearchTextEdit" to="." method="_on_search_text_edit_text_changed"]
[connection signal="value_changed" from="GridContainer/HSlider" to="." method="_on_size_slider_value_changed"]
[connection signal="value_changed" from="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer/RotationContainer/RotationSlider" to="." method="_on_rotation_slider_value_changed"]
[connection signal="value_changed" from="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer/UVScaleContainer/UVScaleSlider" to="." method="_on_uv_scale_slider_value_changed"]
[connection signal="button_up" from="SplitContainer/VSplitContainer/MarginContainer/VBoxContainer/ToggleNMButton" to="." method="_on_toggle_nm_button_button_up"]
[connection signal="dir_selected" from="OriginFileDialog" to="." method="_on_origin_dir_selected"]
[connection signal="dir_selected" from="DestinationFileDialog" to="." method="_on_destination_dir_selected"]

[editable path="SplitContainer/VSplitContainer/AspectRatioContainer/SubViewportContainer/SubViewport/Node3D"]
